frontend/overlays/blue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: frontend
  labels:
    app: frontend-active
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-active
  template:
    metadata:
      labels:
        app: frontend-active
    spec:
      containers:
        - name: frontend-container
          image: vikasprince/MERN-Frontend:v1-blue
          ports:
            - containerPort: 80
